# projeto-iot

./: .env  README.md  aluno_bot.py  analise_dados.py  analise_dados_fraude.py  dadosreais.json  iot.ino  pyproject.toml  supervisor_bot.py  teste.py
codigo2_0/: codigo2_0.ino
codigo_feito/: codigo_feito.ino
codigo_final_iot/: codigo_final_iot.ino
